# logmon

./: .env.example  .gitignore  pyproject.toml
prompts/: system_context.md
sample_log/smps_stat/: smps_stats_sample.csv
src/: main.py  pipeline.py
src/batch/: collect_batch.py
src/dashboard/: dashboard.py
src/nodes/: classify_input.py  detect_anomaly.py  evaluate_status.py  generate_alert.py  generate_guide.py  generate_report.py  load_logs.py  notify.py  send_slack.py
src/prompts/: system_context.md
src/schemas/: state.py
src/scripts/: generate_sample_data.py  generate_threshold_profile.py  ingest_siteminder.py  verify_rag.py
src/tools/: gmail_collector.py  incident_log_tool.py  log_parser.py  log_query_tool.py  rag_search_tool.py  test_gmail_content.py  test_gmail_list.py  test_log_parser.py  web_search_tool.py
src/utils/: host_mapper.py  prompt_loader.py
