[project]
name = "logmon"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    # LangChain / LangGraph
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langchain-community>=0.3",

    # Vector DB
    "chromadb>=0.5",

    # LLM / Embedding
    "openai>=1.40",

    # Monitoring
    "langfuse>=2.0",

    # External Integrations
    "google-api-python-client>=2.0",
    "google-auth-httplib2>=0.2",
    "google-auth-oauthlib>=1.2",
    "tavily-python>=0.3",
    "slack-sdk>=3.27",

    # Storage
    "SQLAlchemy>=2.0",

    # Utilities
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "ipykernel>=6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
